# WSP

./: README.md
achivement-frontend-pc/: .env.dev  .env.prod  .gitignore  README.md  components.d.ts  env.d.ts  index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.config.ts
achivement-frontend-pc/src/: App.vue  main.ts
achivement-frontend-pc/src/apis/: apis.ts
achivement-frontend-pc/src/assets/: base.css  main.css
achivement-frontend-pc/src/common/: module.ts
achivement-frontend-pc/src/components/: Loading.vue
achivement-frontend-pc/src/config/: config.ts
achivement-frontend-pc/src/layout/: index.vue
achivement-frontend-pc/src/plugins/: vuetify.js
admin-frontend/: .env.development  .env.production  package.json  pnpm-lock.yaml
admin-frontend/src/: permission.js
backend/: .gitignore
backend-onchain/: .gitignore
backend-onchain/apiservice/: config.py  entrypoint.sh  main.py  openapi.json
backend-onchain/chainjob/: config.py  main.py
backend/apiservice/: .gitignore  config.py  entrypoint.ps1  entrypoint.sh  main.py  openapi.json  pyproject.toml  requirements.txt
backend/apiservice/dao/: chain_mongo.py  model.py  mongo.py
backend/apiservice/hack/: add_deleted_at.py  aliupload.py  gen_qrcode.py
backend/apiservice/service/: api_account_3rd_binding.py  api_account_profile.py  api_backend.py  api_basic.py  api_condition.py  api_condition_bilibili.py  api_condition_bilibili_test.py  api_condition_follow.py  api_condition_login.py  api_condition_offline.py  api_condition_weibo.py  api_condition_weibo_test.py  api_feedback.py  api_premium.py  api_profile.py  api_profile_follow.py  api_profile_relation.py  api_sbt.py  api_wechat.py  audit.py  service.py
backend/apiservice/tests/: test_aliyun_green.py  test_audit.py  test_wxwork_bot.py
backend/apiservice/tools/: audit.py  netfile.py  qrcode.py  wxwork_bot.py
contracts/: .gitignore  README.md  pnpm-lock.yaml  pnpm-workspace.yaml
did-frontend-pc/: .gitignore  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.config.ts
did-frontend-pc/public/: site.webmanifest
did-frontend-pc/src/: App.vue  main.ts
frontend-mobile/: .gitignore  App.vue  index.html  main.js  manifest.json  package-lock.json  package.json  pages.json  pnpm-lock.yaml  tailwind.config.js  uni.scss  vite.config.js
frontend-mobile/components/: Confetti.vue
frontend-mobile/static/: spicon.scss  theme.dark.css
frontend-mobile/store/: storage.js
(+270 files in other folders)
